# ToolBox

./: .gitignore  .gitmodules  Cargo.toml  aminos-软件源别名测试清单.txt  build.cmd  命令总览.md  提交规范.md  文档.md
.cargo/: config.toml
_arg/: Cargo.toml
_arg/src/: arg.rs  cmd.rs  help.rs  lib.rs  parse.rs  tests.rs  theme.rs
_cli/: Cargo.toml
_cli/src/: lib.rs
_color/examples/: demo.rs
_color/src/: align.rs  format.rs  style.rs  width.rs
_ls/: Cargo.toml
_ls/src/: main.rs  scanner.rs
_net/: Cargo.toml
_net/src/: agent.rs  aria2c.rs  config.rs  curl.rs  lib.rs  powershell.rs  probe.rs  range.rs  speedtest.rs  verify.rs
aminos/: Cargo.toml  as-命令参考.md  source.json  style-guide.md
aminos v0.1.0/: build.rs
aminos v0.1.0/src/: cmd_cache.rs  cmd_init.rs  help.rs  list_config.rs  main.rs  repo.rs
aminos v0.1.0/src/installer/: helpers.rs  install_flow.rs  uninstall_flow.rs
aminos v0.2.0/: Cargo.toml
aminos v0.2.0/src/cmd/: install.rs
aminos v0.3.0/src/: main.rs
aminos v0.3.0/src/cmd/: uninstall.rs
aminos v0.3.0/src/installer/: installer_type.rs  portable.rs
aminos/.cargo/: config.toml
aminos/src/: cmd_cache.rs  cmd_config.rs  cmd_download.rs  cmd_downloader.rs  cmd_env.rs  cmd_info.rs  cmd_init.rs  cmd_install.rs  cmd_list.rs  cmd_names.rs  cmd_self.rs  cmd_self_update.rs  cmd_source.rs  cmd_tool.rs  cmd_uninstall.rs  cmd_upgrade.rs  download.rs  downloader.rs  help.rs  helpers.rs  installer.rs  list_config.rs  main.rs  opts.rs  paths.rs  pe_version.rs  registry.rs  software.rs  speedtest.rs
aminos/src/cmd/: install.rs  list.rs  mod.rs  show.rs  update.rs
aminos/src/installer/: download.rs  executor.rs  helpers.rs  install_flow.rs  uninstall_flow.rs
aminos/命令范式/: as.txt
as/: Cargo.toml  source.json
as/src/: main.rs  paths.rs  software.rs
as/src/cmd/: freeze.rs
as/src/installer/: mod.rs
as4/: Cargo.toml  source.json
as4/src/: download.rs  main.rs  paths.rs  software.rs
as4/src/cmd/: freeze.rs  install.rs  list.rs  mod.rs  show.rs  uninstall.rs  update.rs
as4/src/installer/: mod.rs
aspkg/: HANDOFF_2026-06-21.md
aspkg/src/: main.rs  paths.rs  software.rs
aspkg/src/cmd/: freeze.rs  uninstall.rs
aspkg/src/installer/: mod.rs
color/: Cargo.toml
color/src/: ansi.rs  lib.rs  style.rs
config/: Cargo.toml
config/src/: env.rs  lib.rs  paths.rs  source.rs  sources.rs
e/src/: main.rs
env/: Cargo.toml
env/src/: activate.rs  config.rs  main.rs
ls/: Cargo.toml  style-guide.md
ls/src/: config.rs  display.rs  envset.rs  links.rs  main.rs  scanner.rs
lw/: Cargo.toml
lw/src/: config.rs  main.rs
net/: Cargo.toml
net/src/: agent.rs  aria2c.rs  backend.rs  config.rs  curl.rs  download.rs  lib.rs  powershell.rs  range.rs  speedtest.rs  validator.rs  verify.rs
path-rules/: Cargo.toml
path-rules/src/: lib.rs
pp/: Cargo.toml
pp/src/: main.rs
ss/: Cargo.toml
ss/src/: main.rs
sys/: Cargo.toml
sys/src/: elevation.rs  finder.rs  lib.rs  registry.rs
待删除/aminos/src/: cmd_self_update.rs  cmd_tool.rs  opts.rs  pe_version.rs  software.rs  speedtest.rs
待删除/aminos/src/installer/: detect.rs  download.rs  mod.rs  windows.rs
待删除/aspkg/: source.json
待删除/aspkg/src/cmd/: list.rs  show.rs  update.rs
