[package]
name = "aspkg"
version = "0.1.0"
edition = "2024"

[workspace]

[[bin]]
name = "as"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
color = { path = "../color" }
net = { path = "../net" }
sys = { path = "../sys" }
config = { path = "../config" }
