[package]
name = "as"
version = "0.0.1"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
indicatif = "0.17"
terminal_size = "0.4"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
color = { path = "../color" }
config = { path = "../config" }
net = { path = "../net" }
sys = { path = "../sys" }
