[package]
name = "as"
version = "4.0.0"
edition = "2024"
description = "Windows 软件包管理器 — 极简、便携、强大"

[[bin]]
name = "as"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
color = { path = "../color" }
net = { path = "../net" }
indicatif = "0.17"
terminal_size = "0.4"